cmake_minimum_required(VERSION 3.13)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)

# 0-99
#add_executable(2 2.cpp)
#add_executable(6 6.c)
#add_executable(8 8.c)
#add_executable(9 9.c)
#add_executable(10 10.c)
#add_executable(12 12.c)
#add_executable(13 13.c)
#add_executable(14 14.c)
#add_executable(16 16.c)
#add_executable(17 17.c)
#add_executable(18 18.c)
#add_executable(19 19.c)
#add_executable(20 20.c)
#add_executable(21 21.c)
#add_executable(22 22.cpp)
#add_executable(24 24.c)
#add_executable(25 25.c)
#add_executable(26 26.c)
#add_executable(27 27.c)
#add_executable(28 28.c)
#add_executable(29 29.c)
#add_executable(31 31.cpp)
#add_executable(32 32.cpp)
#add_executable(43 43.cpp)
#add_executable(61 61.cpp)
#add_executable(64 64.cpp)
#add_executable(70 70.cpp)
#add_executable(71 71.cpp)
#add_executable(79 79.cpp)
#add_executable(85 85.cpp)
#add_executable(86 86.cpp)
#add_executable(93 93.cpp)
#add_executable(94 94.cpp)
# 100-200
#add_executable(107 107.cpp)
#add_executable(109 109.cpp)
#add_executable(132 132.cpp)
#add_executable(133 133.cpp)
#add_executable(134 134.cpp)
#add_executable(136 136.cpp)
#add_executable(138 138.cpp)
#add_executable(140 140.cpp)
#add_executable(143 143.cpp)
#add_executable(147 147.cpp)
add_executable(148 148.cpp)
#add_executable(151 151.cpp)
#add_executable(160 160.cpp)
#add_executable(166 166.cpp)
#add_executable(179 179.cpp)
#
#add_executable(238 238.cpp)
#add_executable(239 239.cpp)
#add_executable(260 260.c)
#
#add_executable(304 304.cpp)
#add_executable(322 322.cpp)
#add_executable(332 332.cpp)
#add_executable(338 338.cpp)
#add_executable(372 372.cpp)
#add_executable(377 377.cpp)
#add_executable(384 384.cpp)
#add_executable(386 386.cpp)
#add_executable(391 391.cpp)
#add_executable(393 393.cpp)
#
#add_executable(402 402.cpp)
#add_executable(406 406.cpp)
#add_executable(413 413.c)
#add_executable(419 419.cpp)
#add_executable(440 440.cpp)
#add_executable(442 442.cpp)
#add_executable(451 451.c)
#add_executable(451cpp 451.cpp)
#add_executable(463 463.cpp)
#
#add_executable(504 504.cpp)
#add_executable(508 508.cpp)
#add_executable(509 509.cpp)
#add_executable(513 513.cpp)
#add_executable(515 515.cpp)
#add_executable(526 526.cpp)
#add_executable(540 540.c)
#add_executable(557 557.cpp)
#add_executable(575 575.c)
#
#add_executable(609 609.cpp)
#add_executable(647 647.c)
#add_executable(650 650.cpp)
#add_executable(669 669.cpp)
#add_executable(676 676.cpp)
#add_executable(682 682.cpp)
#add_executable(695 695.c)
#
#add_executable(709 709.c)
#add_executable(739 739.cpp)
#add_executable(789 789.cpp)
#add_executable(791 791.c)
#add_executable(797 797.cpp)
#
#add_executable(804 804.c)
#add_executable(807 807.c)
#add_executable(811 811.cpp)
#add_executable(814 814.cpp)
#add_executable(817 817.cpp)
#add_executable(832 832.c)
#add_executable(841 841.cpp)
#add_executable(852 852.c)
#add_executable(856 856.cpp)
#add_executable(861 861.cpp)
#add_executable(865 865.cpp)
#add_executable(877cpp 877.cpp)
#add_executable(877 877.c)
#add_executable(883 883.cpp)
#add_executable(884 884.cpp)
#add_executable(885 885.cpp)
#add_executable(889 889.c)
#add_executable(890 890.cpp)
#add_executable(894 894.cpp)
#
#add_executable(905 905.c)
#add_executable(919 919.cpp)
#add_executable(921 921.cpp)
#add_executable(922 922.cpp)
#add_executable(929 929.c)
#add_executable(931 931.c)
#add_executable(932 932.c)
#add_executable(934 934.cpp)
#add_executable(944 944.c)
#add_executable(942 942.c)
#add_executable(946 946.c)
#add_executable(950 950.c)
#add_executable(951 951.cpp)
#add_executable(959 959.cpp)
#add_executable(959c 959.c)
#add_executable(961 961.c)
#add_executable(969 969.cpp)
#add_executable(977 977.c)
#add_executable(979 979.cpp)
#add_executable(981 981.cpp)
#add_executable(983 983.cpp)
#add_executable(986 986.cpp)
#add_executable(997 997.cpp)
#
#add_executable(1002 1002.cpp)
# add_executable(1091 1091.cpp)
#add_executable(1092 1092.cpp)
#add_executable(1094 1094.cpp)
#add_executable(1367 1367.cpp)